# rishat_assignment

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
items/: admin.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py
items/templates/: item.html
rishat_assignment/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: format.sh  run.sh
