[project]
name = "rishat-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.9.7",
    "stripe>=11.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "DJ",
    "I",
    "ANN",
]
ignore = ["ANN204", "ANN002", "ANN003"]
dummy-variable-rgx = "__.*"
exclude = ["manage.py", "items/migrations/*.py"]

[tool.ruff.format]
quote-style = "double"
exclude = ["manage.py", "items/migrations/*.py"]
